<resources>
    <string name="app_name">صانعی</string>
    <string name="KEY_CALL">220</string>
    <!-- menufragment -->

    <string name="menufragment_label_Title">منو اصلی</string>
    <string name="menufragment_label_btnenterwebsite">وب سایت</string>
    <string name="menufragment_label_btnPayments">وجوهات شرعی</string>
    <string name="menufragment_label_btnSendEmail">ارسال سوال</string>
    <string name="menufragment_label_btnNews">اخبار</string>
    <string name="menufragment_label_btnEstekhare">استخاره</string>
    <string name="menufragment_label_btnLibrary">کتابخانه</string>
    <string name="menufragment_label_btnFeghhi">دروس</string>
    <string name="menufragment_label_btnPDF">پی.دی.اف کتابها</string>
    <string name="menufragment_label_btnNashrie">نشریه صفیر</string>
    <string name="menufragment_label_btnContactUs">تماس با ما</string>
    <string name="menufragment_label_btnAboutUs">درباره ما</string>
    <string name="menufragment_label_btnSetting">تنظیمات</string>
    <string name="menufragment_label_btnHelp">راهنما</string>

    <!-- WebView -->
    <string name="check_internet_connection">اتصال به اینترنت را چک کنید</string>

    <!-- book list grid item -->

    <string name="lbl_bookName_gridItem"></string>
    <string name="lbl_AutorName_gridItem">Dummy Button</string>
    <string name="lbl_Year_gridItem">انتشار :</string>

    <!-- book list grid item -->
    <!-- email Us -->
    <string name="contact_form">تماس با ما</string>
    <string name="contact_form_name">نام</string>
    <string name="contact_form_email">ایمیل</string>
    <string name="contact_form_subject">موضوع</string>
    <string name="contact_form_message">متن ایمیل</string>
    <string name="contact_form_button">ارسال</string>
    <string name="contact_form_post_message">منتظر بمانید! در حال ارسال ایمیل هستیم...</string>
    <string name="contact_posted">پیغام شما با موفقیت ارسال شد.</string>
    <string name="empty_name">نام خود را وارد کنید</string>
    <string name="invalid_email">ایمیل نا معتبر است</string>
    <string name="empty_message">متن خود را وارد کنید</string>
    <string name="empty_subject">موضوع خود را وارد کنید</string>
    <string name="sending_email">در حال ارسال</string>
    <string name="email_sent">ایمیل ارسال شد</string>
    <string name="email_sending_error">ایرادی در ارسال رخ داده است</string>
    <!--email Us -->

    <!-- Contact Us -->
    <string name="contactUs_Address">نشانی</string>
    <string name="contactUs_PostCode">کد پستی</string>
    <string name="contactUs_MailBox">صندوق پستی</string>
    <string name="contactUs_PhoneNumbers">تلفن های تماس</string>
    <string name="contactUs_Fax">نمابر</string>

    <string name="tells_list_dialog_text">شماره های تماس</string>
    <string name="tells_list_dialog_cancel">انصراف</string>

    <!--Contact Us -->

    <!-- Settings -->
    <string name="settings_ThemeSelect">حالت پوسته: </string>
    <string name="settings_FontSelect">انتخاب فونت: </string>
    <string name="settings_FontNazanin">نازنین</string>
    <string name="settings_FontLotus">لوتوس</string>
    <string name="settings_FontKoodak">کودک</string>
    <string name="settings_FontYekan">یکان</string>
    <string name="settings_FontSize">اندازه قلم: </string>
    <string name="settings_ChooseLanguage">انتخاب زبان:  </string>

    <string name="txt_ask_onexit_title"></string>
    <string name="txt_ask_onexit">آیا میخواهید از برنامه خارج شوید ؟</string>
    <string name="txt_ask_onexit_yes">بله</string>
    <string name="txt_ask_onexit_no">خیر</string>

    <string name="txt_search_hint">جستجوی نام کتاب ...</string>

    <string name="Downlading">در حال بارگیری ...</string>
    <!--Settings-->
</resources>
