<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hmohamadi.ebooklibrary.Menu_Fragment">
<android.support.v7.widget.LinearLayoutCompat
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">
    <android.support.v7.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textAlignment="center"
        android:gravity="center_vertical"
        android:textSize="25dp"
        android:text="@string/menufragment_label_Title"/>
    <!-- TODO: Update blank fragment layout -->
    <Button
        android:id="@+id/btnEnterWebSIte"
        style="@style/App_btnStyle"
        android:drawableLeft="@mipmap/ic_enterwebsite"
        android:text="@string/menufragment_label_btnenterwebsite" />
    <Button
        android:id="@+id/btnEnterPayments"
        style="@style/App_btnStyle"
        android:drawableLeft="@mipmap/ic_menufragment_payments"
        android:text="@string/menufragment_label_btnPayments" />
    <Button
        android:id="@+id/btnSendEmail"
        style="@style/App_btnStyle"
        android:drawableLeft="@mipmap/ic_sendemail"
        android:text="@string/menufragment_label_btnSendEmail" />

    <Button
        android:id="@+id/btnContactUs"
        android:drawableLeft="@mipmap/ic_contactus"
        style="@style/App_btnStyle"
        android:text="@string/menufragment_label_btnContactUs" />



    <Button
        android:id="@+id/btnAboutUs"
        style="@style/App_btnStyle"
        android:drawableLeft="@mipmap/ic_aboutus"
        android:text="@string/menufragment_label_btnAboutUs"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btnSetting"
        style="@style/App_btnStyle"
        android:drawableLeft="@mipmap/ic_menufragment_setting"
        android:text="@string/menufragment_label_btnSetting" />

    <Button
        android:id="@+id/btnHelp"
        style="@style/App_btnStyle"
        android:drawableLeft="@mipmap/ic_help"
        android:text="@string/menufragment_label_btnHelp"
        android:visibility="gone"/>

    <android.support.v7.widget.LinearLayoutCompat

        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="0dp"
        android:layout_weight="1">

    </android.support.v7.widget.LinearLayoutCompat>
</android.support.v7.widget.LinearLayoutCompat>
</FrameLayout>
